
[metadata]
name = StreamlyneWebsite
version = 0.4
description =Streamlyne public facing website, optimised as a python module.
author = Dawson Reid, and Todd Murphy
author_email = dawson@streamlyne.co
url = http://www.streamlyne.co

[global]
command-packages=setup

[sdist]
formats = bztar

[render_head_js]
sources =
    js/jquery-1.9.1.js
    js/modernizr-2.6.2-respond-1.1.0.min.js
output = site/js/sl.head.min.js

[render_foot_js]
sources =
    js/jquery.color-2.1.2.min.js
    js/bootstrap.min.js
    js/main.js
    js/rotate.js
    js/twitter-feed.js
output = site/js/sl.foot.min.js

[render_css]
sources =
    css/*.css
output = site/css/sl.min.css
